[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SpectroscopicMapping"
authors = [
    {name = "Florian Dobener", email = "github@schroedingerscat.org"}
]
maintainers = [
    {name = "Florian Dobener", email = "github@schroedingerscat.org"}
]
description = "A small tool to map three dimensional microscopy/spectroscopy images in jupyter"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
keywords = ["mapping", "numerical-analysis", "photoluminescence", "raman"]
dependencies = [
    "plotly",
    "numpy",
    "scipy",
    "pandas",
    "ipywidgets",
    "h5py"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/domna/SpectroscopicMapping"
"Bug Tracker" = "https://github.com/domna/SpectroscopicMapping/issues"

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "pytest",
    "pytest-cov",
    "pip-tools"
]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"
